# BSVM

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  test.asm
include/: allocator.h  assembler.h  binary.h  common.h  cpu.h  instructions.h  instructions_codec.h  lexer.h  loader.h  memory.h  parser.h  vm.h
src/: binary.c  cpu.c  instructions.c  instructions_codec.c  loader.c  main.c  main_bsvm.c  main_bsvm.cw  memory.c  vm.c
src/format/: binary.c
src/runtime/: allocator.c  cpu.c  instructions.c  instructions_codec.c  loader.c  memory.c  vm.c
src/toolchain/: assembler.c  lexer.c  parser.c
